# RG_Projekat

./: CMakeLists.txt  README.md  main.cpp
include/: Camera.h  Lampa.h  Mesh.h  Model.h  Shader.h
include/imgui/: CMakeLists.txt
resources/objects/drvo/: 10447_Pine_Tree_v1_L3b.mtl
resources/objects/mesec/: Moon 2K.mtl
resources/objects/sator3/: 10495_Green_Mesh_Tent_V1_L3.mtl
resources/shaders/: blend.fs  blend.vs  bloom.fs  bloom.vs  blur.fs  blur.vs  cubeFShader.fs  cubeVShader.vs  ground.fs  ground.vs  groundFShader.fs  hdr.fs  hdr.vs  lampa.fs  lampa.vs  lightFShader.fs  lightVShader.vs  model.fs  modelFShader.fs  modelVShader.vs  moon.fs  skybox.fs  skybox.vs
